@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.601 2008-03-13 21:19:16 martin Exp $
+# $Id: CHANGES,v 1.602 2008-03-14 08:46:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -141,6 +141,8 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.6 (2008/??/??)
+ - (2008/03/14) Fixed bug# 954 - ticket split should linking tickets (origin to
+    new one).
  - (2008/03/13) Added new turkish translation, thanks to Necmettin Begiter!
  - (2008/03/11) Fixed bug# 2763 - Trimming of service name input field produce
     errors.
